28 January 2009

* Support mouse in copy mode to move cursor. Can't do anything else at the
  moment until other mouse modes are handled.
* Better support for at least the most common variant of mouse input: parse it
  and adjust for different panes. Also support mouse in window/session choice
  mode.

27 January 2009

* Bring back the fancy window titles with session/window names: it is easy to
  work around problems with elinks (see FAQ).
* -u flag to scroll-mode and copy-mode to start scrolled one page
   up. scroll-mode -u is bound to prefix,page-up (ppage) by default.
* Allow status, mode and message attributes to be changed by three new options:
  status-attr, mode-attr, message-attr. A comma-separataed list is accepted
  containing: bright, dim, underscore, blink, reverse, hidden, italics, for
  example:

	set -g status-attr bright,blink

  From Josh Elsasser, thanks!

26 January 2009

* Be more clever about picking the right process to create the window name.
* Don't balls up the terminal on UTF-8 combined characters. Don't support them
  properly either - they are just discarded for the moment.

25 January 2009

* load-buffer command

23 January 2009

* Use reverse colours rather than swapping fg and bg for message, mode and
  status line. This makes these usable on black and white terminals.
* Better error messages when creating a session or window fails.
* Oops. Return non-zero on error. Reported by Will Maier.

21 January 2009

* Handle SIGTERM (and kill-server which uses it), a bit more neatly - tidy
  up properly and print a nicer message. Same effect though :-).
* new-window now supports -k to kill target window if it exists.
* Bring back split-window -p and -l options to specify the height a percentage
  or as a number of lines.
* Make window and session choice modes allow you to choose items in vi keys
  mode (doh!). As a side-effect, this makes enter copy selection (as well
  as C-w/M-w) when using emacs keys in copy mode. Reported by merdely.
